Basics/Deployment/three-tier-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: python-app.example.com  # your domain or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-frontend-service
            port:
              number: 80
